# qt_quick_and_qml_test

./: CMakeLists.txt  Main.qml  Page.qml  main.cpp  page.qml
